Added the option for having the token of HuggingFace as an environment variable

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
     container_name: "cicero-synthesizer-local-dev"
     environment:
       DOCKER_BUILDKIT_VALUE: ${DOCKER_BUILDKIT_VALUE}
+      HUGGINGFACE_TOKEN: ${HUGGINGFACE_TOKEN}
     volumes:
       - ${HOME}/.ssh:/root/.ssh
       - /var/run/docker.sock:/var/run/docker.sock
