--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.92.0
 gradio>=3.35.2
+huggingface_hub>=0.15.1
 pandas>=2.0.2
 setuptools==67.6.1
+spacy>=3.5.3
 torch==2.0.0
 tqdm==4.65.0
 uvicorn==0.20.0
