--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,10 @@ repos:
     hooks:
       - id: flake8
         language_version: python3.9
+        exclude: >
+          (?x)^(
+            src/focused_summary_example.py
+            )
 
   - repo: https://github.com/ambv/black
     rev: 22.3.0
