--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,4 +2,4 @@
 line_length = 79
 multi_line_output = 3
 include_trailing_comma = True
-known_third_party =datasets,fastapi,huggingface_hub,numpy,pandas,pydantic,requests,sentence_transformers,spacy,tiktoken,torch,utils
+known_third_party =datasets,fastapi,gradio,huggingface_hub,numpy,pandas,pydantic,requests,sentence_transformers,spacy,tiktoken,torch,utils
