Updated Dockerfile to account for the port number. Updated the 'docker-compose' by adding the set of environment variables

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -61,6 +61,8 @@ services:
     container_name: "cicero-synthesizer-app"
     environment:
       APP_SERVER_PORT: ${APP_SERVER_PORT}
+      HUGGING_FACE_HUB_TOKEN: ${HUGGING_FACE_HUB_TOKEN}
+      HUGGING_FACE_USERNAME: ${HUGGING_FACE_USERNAME}
     volumes:
       - ..:/opt/ml
     ports:
