--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
     volumes:
       - ..:/opt/ml
     ports:
-      - ${INPUT_APP_PORT:-80}:${OUTPUT_APP_PORT:-80}
+      - ${INPUT_APP_PORT:-8501}:${OUTPUT_APP_PORT:-8501}
     working_dir: /opt/ml
     command:
       [
@@ -44,8 +44,28 @@ services:
         "--host",
         "0.0.0.0",
         "--port",
-        "7860",
+        "8501",
         "--reload",
         "--reload-dir",
         "/opt/ml"
       ]
+  #
+  # --- Service for running the Gradio application locally
+  app:
+    # Building the local image
+    build:
+      context: ../
+      dockerfile: ./Dockerfile
+    # Running the local image
+    image: "cicero-synthesizer-app"
+    container_name: "cicero-synthesizer-app"
+    environment:
+      APP_SERVER_PORT: ${APP_SERVER_PORT}
+      HUGGING_FACE_HUB_TOKEN: ${HUGGING_FACE_HUB_TOKEN}
+      HUGGING_FACE_USERNAME: ${HUGGING_FACE_USERNAME}
+    volumes:
+      - ..:/opt/ml
+    ports:
+      - ${APP_SERVER_PORT:-7860}:${APP_SERVER_PORT:-7860}
+    working_dir: /opt/ml
+    command: [ "python", "src/app_service/app.py" ]
