Updated code to fix the code linting of the project

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,4 @@ data/
 src/utils/gpt35_summaries/df_embed.csv
 src/utils/gpt35_summaries/df_embed_out2.csv
 src/utils/gpt35_summaries/words_alpha.txt
+.DS_Store
